--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,6 +15,7 @@
  <body>
      <div class="main-content"> 
           {{>header}}
+          <p>This site was created by Heikel Khaldi. It uses dara from mapbox.com</p>
             <img class="portrait" src='./img/me.png' alt='image that describes me' />
     </div>
     {{>footer}}
